# serde_prometheus

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  audit_cron.yml  ci.yml
benches/: bench.rs
examples/: main.rs
src/: error.rs  key.rs  label.rs  lib.rs  modifiers.rs  util.rs  value.rs
src/snapshots/: serde_prometheus__test__fake_nested_metrics.snap  serde_prometheus__test__metered_integ__normal_registry.snap  serde_prometheus__test__metered_integ__wrapped_registry.snap  serde_prometheus__test__namespace__override_works.snap  serde_prometheus__test__serializer__geoip.snap  serde_prometheus__test__serializer__overflows_labels.snap  serde_prometheus__test__tuple_unpacking.snap
