[package]
name = "serde_prometheus"
version = "0.1.3"
description = "serde-based serializer for prometheus' text-based exposition format"
authors = ["Jordan Doyle <jordand@doyle.la>"]
edition = "2018"
license = "WTFPL OR 0BSD"
repository = "https://github.com/w4/serde_prometheus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
itoa = "0.4"
ftoa = "0.1"
regex = "1.3"
lazy_static = "1.4"
snafu = "0.6"

[dev-dependencies]
metered = "0.4"
tokio = { version = "0.2", features = ["full"] }
rand = "0.7"
