[package]
name = "serde_prometheus"
version = "0.2.8"
description = "serde-based serializer for prometheus' text-based exposition format"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2021"
license = "WTFPL OR 0BSD"
repository = "https://github.com/w4/serde_prometheus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8"
rpds = "1.1"
serde = "1.0"
thiserror = "2.0"
nom = "7.1"
serde_plain = "1.0"

[dev-dependencies]
criterion = "0.5"
insta = "1.26"
serde_json = "1.0"
metered = "0.9"
tokio = { version = "1", features = ["full"] }
rand = "0.8"

#[profile.bench]
#debug = true

[[bench]]
name = "bench"
harness = false
